derive/tests/snapshots/wrapper_methods/Category/get_all_categories.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `category` table.
    pub fn get_all_categories<'a>(&'a self) -> impl Iterator<Item = Category> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().category().iter()
    }
}
